modified:   6. Loops/Loops.ipynb new file:   6. Loops/_img/for.jpg

--- a/6. Loops/Loops.ipynb
+++ b/6. Loops/Loops.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -213,7 +213,8 @@
     "do\n",
     "{\n",
     "\n",
-    "    // print the Initially Negative Number\n",
+    "    // print the Initially Negative Number,\n",
+    "    // taking care to then increment it by one\n",
     "    Console.WriteLine( $\"{ initiallyNegativeNumber++ }\" );\n",
     "\n",
     "}   while( initiallyNegativeNumber >= 0 && initiallyNegativeNumber < 5  );\n",
@@ -233,172 +234,178 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Explicit Type Conversion**"
+    "#### `for` **Loops**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Used whenever there is a **possibility of data loss**.   \n",
-    "\n",
-    "When converting *floating point type* to *integer type*, there is *always a loss of data* coming from the elimination of the fractional part, so an **explicit conversion** is obligatory (e.g. `double` to `long`).  \n",
-    "   \n",
-    "To make such a conversion, it is necessary to use the **operator for data conversion** `(type)`.\n",
-    "\n",
-    "There may also be **data loss** when converting a type with a *wider range* to type with a *narrower one* (`double` to `float`, or `long` to `int`)."
+    "`for` loops are a slightly more complicated than `while` and `do-while` loops, but on the other hand they can solve more complicated tasks with less code."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Data Loss During Type Conversion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "public double dub = 5.2d;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "(3,16): error CS0266: Cannot implicitly convert type 'double' to 'long'. An explicit conversion exists (are you missing a cast?)",
-     "output_type": "error",
-     "traceback": [
-      "(3,16): error CS0266: Cannot implicitly convert type 'double' to 'long'. An explicit conversion exists (are you missing a cast?)"
-     ]
-    }
-   ],
-   "source": [
-    "// without explicit type conversion\n",
-    "\n",
-    "long fromDub = dub;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\">5</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "// with explicit type conversion to long, the fractional part will be lost\n",
-    "\n",
-    "public long LngFromDub = (long) dub;\n",
-    "\n",
-    "LngFromDub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\">5000000000</div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "// Assigning a massive value to the double type that wont fit in an int type\n",
-    "\n",
-    "dub = 5e9d;\n",
-    "\n",
-    "dub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The intFromDub value is now -2147483648\n",
-      "Recall that the minimum int value is also -2147483648\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Observe that since the value is too large, the minimum int value is returned\n",
-    "\n",
-    "int intFromDub = (int) dub;\n",
-    "\n",
-    "Console.WriteLine(\n",
-    "    $\"The intFromDub value is now {intFromDub}\\n\" +\n",
-    "    $\"Recall that the minimum int value is also {int.MinValue}\"\n",
-    ");"
+    "```c#\n",
+    "for (initialization; condition; update)\n",
+    "{\n",
+    "    // loop's body; \n",
+    "}\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
     "\n",
-    "Note that *it is not always possible to predict what the value of a variable will be after its scope overflows*!   \n",
-    "   \n",
-    "Therefore, use sufficiently large types and be careful when switching to a \"smaller\" type."
+    "![for loop img](./_img/for.jpg)\n",
+    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since none of the *parameters* of `for` loops are mandatory, we can skip them all and we will get an **infinite loop**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "for( ; ; )\n",
+    "{\n",
+    "    // Infinite Loop\n",
+    "}   \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, observe that the `for` loop typically contains the following *parameters*: \n",
+    "- an **Initialization Block** (**A**)\n",
+    "- a **Condition** (**B**)\n",
+    "- **Updating Commands** for the loop variables (**C**)\n",
+    "- a **Body** (**D**)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Initialization Block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is executed only once, just *before* entering the loop. Usually the *initialization block* is used to declare the *counter-variable* (also called a *loop variable*) and to set its *initial value*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "for( int counter = 0; ; )\n",
+    "{\n",
+    "    // counter is visible here and it can be used\n",
+    "}   \n",
+    "// Here counter can not be used\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The condition (loop condition) is evaluated once *before* each iteration of the loop, just like in the `while` loops. If the result is `true`, the loop’s body is executed. If `false` it is skipped and the loop ends (the program continues immediately after the last line of the loop’s body)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "for( ; counter < 10; )\n",
+    "{\n",
+    "    // Execute Loop Body if the Counter is less than 10\n",
+    "}  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Updating Commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code is executed at each iteration, *after* the loop’s body has been executed. It is most commonly used to *update the value* of the counter variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "for( ; ; counter++ )\n",
+    "{\n",
+    "    // Execute Loop Body,\n",
+    "    // then update the counter as specified \n",
+    "}  \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Body"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The body of the loop contains a block with source code.     \n",
+    "The loop variables, declared in the initialization block of the loop are available in it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "for( int counter = 0; counter < 10; counter++ )\n",
+    "{\n",
+    "    // Execute the instructions listed here\n",
+    "}  \n",
+    "```"
    ]
   },
   {
@@ -406,196 +413,6 @@
    "metadata": {},
    "source": [
     "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Forcing Overflow Exceptions During Casting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sometimes it is convenient, instead of getting the wrong result, when a type **overflows** during switching from *larger* to *smaller* type, to get **notification** of the problem.   \n",
-    "   \n",
-    "This is done by the keyword `checked` which includes a *check for overflow in integer types*:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "System.OverflowException: Arithmetic operation resulted in an overflow.\r\n   at Submission#15.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.OverflowException: Arithmetic operation resulted in an overflow.\r\n",
-      "   at Submission#15.<<Initialize>>d__0.MoveNext()\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
-     ]
-    }
-   ],
-   "source": [
-    "// Here an exception (i.e.notification of an error) of type OverflowException is raised\n",
-    "\n",
-    "checked ( (int) dub ) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Possible Explicit Conversions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The **explicit conversions** between numeral types in C# are possible between any couple among the following types:\n",
-    "\n",
-    "- `sbyte`\n",
-    "- `byte`\n",
-    "- `short`\n",
-    "- `ushort`\n",
-    "- `char`\n",
-    "- `int`\n",
-    "- `uint`\n",
-    "- `long`\n",
-    "- `ulong`\n",
-    "- `float`\n",
-    "- `double`\n",
-    "- `decimal`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that in these conversions data *can be lost*, like data about the *number size* or information about its *precision*.   \n",
-    "\n",
-    "Notice that conversion *to or from `string`* is *not possible through **typecasting***."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### **Conversion to String**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If it is necessary we can convert *any type of data*, including the value `null`, to `string`.   \n",
-    "   \n",
-    "The **conversion of strings** is done **automatically** whenever you use the **concatenation operator** (`+`) and one of the arguments is not of type string.    \n",
-    "   \n",
-    "- In this case the argument is *converted to a `string`*, and the operator *returns a new `string`* representing the **concatenation** of the two strings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "source": [
-    "Another way to convert different objects to type `string` is to call the method `ToString()` of the variable or the value.   \n",
-    "   \n",
-    "It is valid for all data types in .NET Framework.   \n",
-    "- Even calling `3.ToString()` is fully valid in C# and the result will return the `string` \"3\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span><a href=\"https://docs.microsoft.com/dotnet/api/system.string?view=net-5.0\">System.String</a></span>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "3.ToString().GetType()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that the `+` for concatenating strings *can cause unpleasant effects on the addition of numbers*, because it **has equal priority with the operator `+` for mathematical addition**.   \n",
-    "  \n",
-    "Unless the priorities of the operations are changed by placing *brackets`()`*, they will *always be executed from left to right*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sum = 36\n",
-      "Sum = 1224\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "int a = 12, b = 24;\n",
-    "\n",
-    "string correctSumConvertedToString = \"Sum = \" + (a + b);\n",
-    "string incorrectSumConvertedToString = \"Sum = \" + a + b;\n",
-    "\n",
-    "Console.WriteLine(\n",
-    "    correctSumConvertedToString +    // actually sums a and b \n",
-    "    '\\n' + \n",
-    "    incorrectSumConvertedToString    // only concatenates a with b\n",
-    ");\n"
    ]
   }
  ],
