--- a/6. Loops/Loops.ipynb
+++ b/6. Loops/Loops.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## What Is a \"Loop\"?\n",
     "   \n",
-    "##### In programming often requires repeated execution of a sequence of operations. A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
+    "##### Programming often requires repeated execution of a sequence of operations. A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
     "##### Depending on the type of the loop, the code in it is repeated a fixed number of times or repeats until a given *condition* is `true` (exists).  \n",
     "----"
    ]
