modified:   6. Loops/Loops.ipynb

--- a/6. Loops/Loops.ipynb
+++ b/6. Loops/Loops.ipynb
@@ -48,7 +48,7 @@
     "while (condition) \n",
     "{\n",
     "\n",
-    "    // loop body; \n",
+    "    // Loop Body; \n",
     "\n",
     "}\n",
     "```"
@@ -150,7 +150,7 @@
     "do\n",
     "{\n",
     "\n",
-    "    // executable code; \n",
+    "    // Loop Body; \n",
     "\n",
     "}   while ( condition )\n",
     "```"
@@ -251,7 +251,7 @@
     "```c#\n",
     "for (initialization; condition; update)\n",
     "{\n",
-    "    // loop's body; \n",
+    "    // Loop Body; \n",
     "}\n",
     "```"
    ]
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, observe that the `for` loop typically contains the following *parameters*: \n",
+    "However, observe that the `for` loop typically contains the following **parameters**: \n",
     "- an **Initialization Block** (**A**)\n",
     "- a **Condition** (**B**)\n",
     "- **Updating Commands** for the loop variables (**C**)\n",
@@ -413,6 +413,86 @@
    "metadata": {},
    "source": [
     "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `foreach` **Loops**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This programming construct serves to iterate over *all elements* of an `Array`, `List` or other collection of elements (`IEnumerable`). It *passes through all the elements* of the specified *collection* even if the collection is not indexed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```c#\n",
+    "foreach ( type variable in collection ) \n",
+    "{\n",
+    "    // Loop Body; \n",
+    "}\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compared to a `for` loop, a `foreach` loop has a tendency to be more readable.    \n",
+    "   \n",
+    "There is not as much overhead clutter inside of the parentheses. Also, in many cases the first thing you do a `for` loop is use the *index* to get the correct item out of the array. This is bypassed with a foreach loop.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "January\r\n",
+      "February\r\n",
+      "March\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Given an array of the First Three Months in the year\n",
+    "string[] FirstThreeMonths = {\"January\", \"February\", \"March\"};\n",
+    "\n",
+    "\n",
+    "// For Each Month in the FirstThreeMonths Array:\n",
+    "foreach( string Month in FirstThreeMonths )\n",
+    "{\n",
+    "\n",
+    "    // Print the current Month\n",
+    "    Console.WriteLine( Month );\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that `foreach` loops are somewhat *slower*, simply as a result of their internal mechanics. If you’re discovering that a particular `foreach` loop is taking way more time than you’d like, converting it to a `for` loop is an easy way to get a little extra speed out of it."
    ]
   }
  ],
