modified:   6. Loops/Loops.ipynb new file:   7. Arrays/Arrays.ipynb new file:   7. Arrays/_img/array_anotomy.jpg new file:   7. Arrays/_img/initialized1.jpg new file:   7. Arrays/_img/initialized2.jpg

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Loops"
+    "# 7. Arrays"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Programming often requires repeated execution of a sequence of operations. A **loop** is a basic programming construct that allows **repeated execution of a fragment of source code.**   \n",
-    "##### Depending on the type of the loop, the code in it is repeated a fixed number of times or repeats until a given *condition* is `true` (exists).  \n",
+    "##### Arrays are vital for most programming languages.<br>They are *collections* of *variables* which are commonly reffered to as *elements*:\n",
     "----"
    ]
   },
@@ -24,32 +23,7 @@
     }
    },
    "source": [
-    "#### `while` **Loops**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    }
-   },
-   "source": [
-    "One of the simplest and most commonly used loops is `while`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```c#\n",
-    "while (condition) \n",
-    "{\n",
-    "\n",
-    "    // Loop Body; \n",
-    "\n",
-    "}\n",
-    "```"
+    "#### The Anatomy of an `Array`"
    ]
   },
   {
@@ -58,7 +32,7 @@
    "source": [
     "<center>\n",
     "\n",
-    "![while loop img](./_img/while.jpg)\n",
+    "![array anotomy](./_img/array_anotomy.jpg)\n",
     "\n",
     "</center>\n"
    ]
@@ -67,56 +41,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above, **condition** is any expression that returns a **Boolean** result – `true` or `false`.   \n",
-    "    \n",
-    "It determines how long the **loop body** will be repeated and is called the *loop condition*. \n",
-    "    \n",
-    "The loop body is the programming code executed at each iteration of the loop, i.e. whenever the input **condition** is `true`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "vscode": {
-     "languageId": "dotnet-interactive.csharp"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number: 0\r\n",
-      "Number: 1\r\n",
-      "Number: 2\r\n",
-      "Number: 3\r\n",
-      "Number: 4\r\n",
-      "Number: 5\r\n",
-      "Number: 6\r\n",
-      "Number: 7\r\n",
-      "Number: 8\r\n",
-      "Number: 9\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "// Starting a number at 0\n",
-    "int number = 0;\n",
-    "\n",
-    "\n",
-    "// Iterating While this number is LESS THAN 10:\n",
-    "while ( number < 10 )\n",
-    "{\n",
-    "\n",
-    "    // Print the number, \n",
-    "    // taking care to then increment it by one \n",
-    "    Console.WriteLine( $\"Number: { number++ }\" );\n",
-    "    \n",
-    "}"
+    "An array’s elements in C# are numbered with `0`, `1`, `2`, … `N-1`. Those numbers are called **indices**.   \n",
+    "   \n",
+    "The *total number of elements* in a given array we call `Length` of an array.   \n",
+    "All elements of a given array are of the *same type*, no matter whether they are primitive or reference types. This allows us to represent a group of similar elements as an *ordered sequence* and work on them as a whole.   \n",
+    "   \n",
+    "Arrays can be in different *dimensions*, but the most used are the *one-dimensional* and the *two-dimensional* arrays. \n",
+    "- One-dimensional arrays are also called *vectors* \n",
+    "- Two-dimensional are also known as *matrices*."
    ]
   },
   {
@@ -130,28 +62,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `do-while` **Loops**"
+    "#### Declaration and Allocation of Memory for `Array`s"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `do-while` loop is similar to the `while` loop, but it checks the condition *after* each execution of its loop body."
+    "In C# the arrays have **fixed** `Length`, which is set at the time of their instantiation and determines the total number of elements."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```c#\n",
-    "do\n",
-    "{\n",
-    "\n",
-    "    // Loop Body; \n",
-    "\n",
-    "}   while ( condition )\n",
-    "```"
+    "##### Creating an `Array` *initialized with default values* using the `new` Operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Instantiate a new Integer Array \n",
+    "// whose Length is fixed to store 6 elements\n",
+    "// from index 0 through index 5\n",
+    "// each initialized with default values\n",
+    "int[] SixElementIntegerArray = new int[ 6 ]; "
    ]
   },
   {
@@ -160,20 +105,9 @@
    "source": [
     "<center>\n",
     "\n",
-    "![do while loop img](./_img/do-while.jpg)\n",
+    "![initialized1](./_img/initialized1.jpg)\n",
     "\n",
     "</center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Initially the **loop body** is executed. *Then* its condition is checked. If it is `true`, the loop’s body is repeated, otherwise the loop ends.   \n",
-    "    \n",
-    "This logic is repeated until the **condition** of the loop is broken.    \n",
-    "   \n",
-    "The body of the loop is *always executed at least once* If the loop’s **condition** is constantly `true`, the loop never ends."
    ]
   },
   {
@@ -189,36 +123,117 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\r\n",
-      "0\r\n",
-      "1\r\n",
-      "2\r\n",
-      "3\r\n",
-      "4\r\n"
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">0</div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">0</div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\">0</div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\">0</div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\">0</div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\">0</div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "SixElementIntegerArray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Creating an `Array` *initialized with explicit values* using `{}` syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Instantiate a new Integer Array \n",
+    "// whose Length is fixed to store 6 elements\n",
+    "// from index 0 through index 5\n",
+    "// initialized with the values {1,2,3,4,5,6}\n",
+    "int[] SixElementIntegerArray = {1,2,3,4,5,6}; "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "\n",
+    "![initialized1](./_img/initialized2.jpg)\n",
+    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\">1</div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\">2</div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\">3</div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\">4</div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\">5</div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\">6</div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "SixElementIntegerArray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe, however, that once the `Length` of an `Array` is set, we *cannot* expand it anymore."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n",
+      "   at Submission#4.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
     }
    ],
    "source": [
-    "// Starting a number that is Initially Negative \n",
-    "int initiallyNegativeNumber = -1;\n",
-    "\n",
-    "\n",
-    "// Execute the following at least once,\n",
-    "//     Iterating While the Initially Negative Number is both Positive AND less than 5:\n",
-    "do\n",
-    "{\n",
-    "\n",
-    "    // print the Initially Negative Number,\n",
-    "    // taking care to then increment it by one\n",
-    "    Console.WriteLine( $\"{ initiallyNegativeNumber++ }\" );\n",
-    "\n",
-    "}   while( initiallyNegativeNumber >= 0 && initiallyNegativeNumber < 5  );\n",
-    "\n",
-    "\n",
-    "// -1 will be printed despite the loop condition stipulating otherwise."
+    "// The valid indices are index 0 through index 5\n",
+    "SixElementIntegerArray[ 6 ] = 0;"
    ]
   },
   {
@@ -451,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
