modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating an `Array` *initialized with default values* using the `new` Operator"
+    "##### Creating a One Dimensional `Array` *initialized with default values* using the `new` Operator"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating an `Array` *initialized with explicit values* using `{}` syntax"
+    "##### Creating a One Dimensional `Array` *initialized with explicit values* using `{}` syntax"
    ]
   },
   {
@@ -204,6 +204,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Bounds of a One Dimensional `Array`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Observe, however, that once the `Length` of an `Array` is set, we *cannot* expand it anymore."
    ]
   },
@@ -232,8 +239,39 @@
     }
    ],
    "source": [
-    "// The valid indices are index 0 through index 5\n",
+    "// The valid indices are index 0 through index 5,\n",
+    "// so we cant add anything further to the right of index 5\n",
     "SixElementIntegerArray[ 6 ] = 0;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n   at Submission#9.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "output_type": "error",
+     "traceback": [
+      "System.IndexOutOfRangeException: Index was outside the bounds of the array.\r\n",
+      "   at Submission#9.<<Initialize>>d__0.MoveNext()\r\n",
+      "--- End of stack trace from previous location ---\r\n",
+      "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
+     ]
+    }
+   ],
+   "source": [
+    "// Similarly,\n",
+    "// We also cannot add anything further to the left of index 0\n",
+    "SixElementIntegerArray[ -1 ] = 0;"
    ]
   },
   {
