modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -47,8 +47,8 @@
     "All elements of a given array are of the *same type*, no matter whether they are primitive or reference types. This allows us to represent a group of similar elements as an *ordered sequence* and work on them as a whole.   \n",
     "   \n",
     "Arrays can be in different *dimensions*, but the most used are the *one-dimensional* and the *two-dimensional* arrays. \n",
-    "- One-dimensional arrays are also called *vectors* \n",
-    "- Two-dimensional are also known as *matrices*."
+    "- **One-dimensional** arrays are also called *vectors* \n",
+    "- **Two-dimensiona**l are also known as *matrices*."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Declaration and Allocation of Memory for `Array`s"
+    "#### **One Dimensional** `Array`s"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating a One Dimensional `Array` *initialized with default values* using the `new` Operator"
+    "##### Declaring a One Dimensional `Array` *initialized with default values* using the `new` Operator"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating a One Dimensional `Array` *initialized with explicit values* using `{}` syntax"
+    "##### Declaring a One Dimensional `Array` *initialized with explicit values* using `{}` syntax"
    ]
   },
   {
