--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **One Dimensional** `Array`s"
+    "#### One Dimensional `Array`s"
    ]
   },
   {
