modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -48,7 +48,7 @@
     "   \n",
     "Arrays can be in different *dimensions*, but the most used are the *one-dimensional* and the *two-dimensional* arrays. \n",
     "- **One-dimensional** arrays are also called *vectors* \n",
-    "- **Two-dimensiona**l are also known as *matrices*."
+    "- **Two-dimensional** are also known as *matrices*."
    ]
   },
   {
