modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -159,8 +159,8 @@
     "// Instantiate a new Integer Array \n",
     "// whose Length is fixed to store 6 elements\n",
     "// from index 0 through index 5\n",
-    "// initialized with the values {1,2,3,4,5,6}\n",
-    "int[] SixElementIntegerArray = {1,2,3,4,5,6}; "
+    "// initialized with the values [1,2,3,4,5,6]\n",
+    "int[] SixElementIntegerArray = { 1, 2, 3, 4, 5, 6 }; "
    ]
   },
   {
