modified:   7. Arrays/Arrays.ipynb

--- a/7. Arrays/Arrays.ipynb
+++ b/7. Arrays/Arrays.ipynb
@@ -23,7 +23,7 @@
     }
    },
    "source": [
-    "#### The Anatomy of an `Array`"
+    "### The Anatomy of an `Array`"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### One Dimensional `Array`s"
+    "### One Dimensional `Array`s"
    ]
   },
   {
@@ -70,6 +70,13 @@
    "metadata": {},
    "source": [
     "In C# the arrays have **fixed** `Length`, which is set at the time of their instantiation and determines the total number of elements."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Declaration and Allocation of Memory"
    ]
   },
   {
@@ -204,14 +211,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Bounds of a One Dimensional `Array`"
+    "#### Accessing the Elements of a One Dimensional `Array`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observe, however, that once the `Length` of an `Array` is set, we *cannot* expand it anymore."
+    "We access the array elements directly using their *indices*.  \n",
+    "Each element can be accessed through the *name of the array* and the *element’s index* (consecutive number) placed in the **brackets** (`[]`).    \n",
+    "    \n",
+    "We can access given elements of the array both for *reading* and for *writing*, which means we can treat elements as variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Observe the First and Last Elements of the Array\n",
+    "// whose indices range from 0 to 5\n",
+    "int FirstElement = SixElementIntegerArray[ 0 ],\n",
+    "    LastElement  = SixElementIntegerArray[ 5 ]; "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">1</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "FirstElement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "vscode": {
+     "languageId": "dotnet-interactive.csharp"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\">6</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "LastElement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bounds of a One Dimensional `Array`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's important to remember that once the `Length` of an `Array` is set, we *cannot* expand it anymore."
    ]
   },
   {
